--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         <div class="social-icons">
             <a href="https://x.com/basketballadba" target="_blank" class="x" title="Follow on X"><i class="fab fa-x-twitter"></i></a>
             <a href="https://www.facebook.com/ATPDBA/" target="_blank" class="facebook" title="Follow on Facebook"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://instagram.com" target="_blank" class="instagram" title="Follow on Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="https://instagram.com/basketballadba/" target="_blank" class="instagram" title="Follow on Instagram"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
     <footer>
