--- a/index.html
+++ b/index.html
@@ -377,17 +377,17 @@
     </nav>
     <div class="content">
         <div id="slideshow">
-            <div class="slide active" style="background-image: url('https://scontent.fvga2-1.fna.fbcdn.net/v/t39.30808-6/485094591_1198615425602270_2071492870669749534_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=cc71e4&_nc_ohc=meHMpRW6MqQQ7kNvwHiyUzt&_nc_oc=AdnfmjcE8SMWtUKqoqecyRTQ5WkzumVJde267DmN_Yz6PhhwwJBdBqb1N2n07tpvluBzCaOYBX97hAp7H_inkgXT&_nc_zt=23&_nc_ht=scontent.fvga2-1.fna&_nc_gid=3abWgz6H10pabRSiKqQKhg&oh=00_AfEs1qKvBQzs0qRZInex60UWVMhCSy6QY9NfXlxs3c4_zA&oe=6816FF78');">
+            <div class="slide active" style="background-image: url('https://miro.medium.com/v2/resize:fit:4800/format:webp/1*iMTsx9S6KxAs__bO9LxNpw.jpeg');">
                 <div class="title">Welcome to ADBA!</div>
                 <div class="description">Join us for an exciting 2025 basketball season in Ananthapuramu District.</div>
             </div>
-            <div class="slide" style="background-image: url('https://scontent.fhyd11-2.fna.fbcdn.net/v/t39.30808-6/463230970_2876914819122797_1663557415765265944_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=cf85f3&_nc_ohc=7tvXdVmSZ-kQ7kNvwEpIWRP&_nc_oc=Adlc9Yh0gaCiU7TAldvsdWPxV4-fZ_nn3LVY6bs77Br_x2Q5XxqJJZ8_85R8tjCvtlMAFWSQBhvLIOsOHzib6VOF&_nc_zt=23&_nc_ht=scontent.fhyd11-2.fna&_nc_gid=ooCb-KZTBuANlenbJhkYmA&oh=00_AfEhJunvpIwh-0bBdcSXTbPiBwDboQJ-dEkXE_q4OWGLLA&oe=68170452');">
+            <div class="slide" style="background-image: url('https://miro.medium.com/v2/resize:fit:4800/format:webp/1*dDiAe2JwQpRDYcD7ZGovIw.jpeg');">
                 <div class="title">Our beloved Bhaskar Reddy sir</div>
                 <div class="description">Remembering our former Basketball president of AP</div>
             </div>
-            <div class="slide" style="background-image: url('https://scontent.fvga2-5.fna.fbcdn.net/v/t39.30808-6/462368510_2867181306762815_8496039909620920712_n.jpg?_nc_cat=111&ccb=1-7&_nc_sid=cf85f3&_nc_ohc=FApe5-9afMIQ7kNvwGThzFt&_nc_oc=AdkmHaGgU_a-e2KRG4SybWnQ_g2dSaYcLlSV1acwBlQ4Pah8HXiQKfD82y3-EOiMyp3HdOTIcr8lnjtYg1plZRhG&_nc_zt=23&_nc_ht=scontent.fvga2-5.fna&_nc_gid=df8sJNnZMPzLViHZMObVqQ&oh=00_AfF2t42dGUtcCnubPxFI_ItfHexEtvjB6ztRwo-XnozuYQ&oe=681A68EC');">
+            <div class="slide" style="background-image: url('https://miro.medium.com/v2/resize:fit:4800/format:webp/1*gT_4R3iqs-log3og3eWeSg.jpeg');">
                 <div class="title">Community Day</div>
-                <div class="description">Where you all draw from Ananthapuramu SSBN Stadium.</div>
+                <div class="description">Where you'll draw from Ananthapuramu SSBN Stadium.</div>
             </div>
         </div>
         <div class="nav-buttons">
