--- a/index.html
+++ b/index.html
@@ -590,11 +590,22 @@
             <p>The 10th AP Sub-Junior Inter District Basketball Championship, held at PES Public School grounds, Chittoor (AP) from May 15th-18th, 2025, saw our boys deliver an outstanding campaign. In a thrilling final, they narrowly fell to East Godavari with a score of 35–38. Despite the close loss, their remarkable play and unwavering determination throughout the game earned them significant recognition and respect from everyone involved in the competition.</p>
         </div>
     </div>
-    <div class="achievement" data-image="https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=150&q=80" data-title="2024 Community Basketball Camp" data-description="ADBA hosted a successful basketball camp at SSBN Stadium in Ananthapuramu, engaging over 100 young athletes. The initiative fostered community spirit, promoted basketball, and provided training under our esteemed coaches, strengthening local talent development.">
-        <img src="https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=150&q=80" alt="2024 Community Basketball Camp">
+    <div class="achievement" data-image="https://cdn-images-1.medium.com/v2/resize:fit:2400/1*86UdliKFCG_YnLIA8n2IyQ.jpeg" data-title="2025 Basketball Summer Coaching Camp" data-description="ADBA hosted a successful basketball camp at SSBN Stadium in Ananthapuramu, engaging over 100 young athletes. The initiative fostered community spirit, promoted basketball, and provided training under our esteemed coaches, strengthening local talent development.">
+        <img src="https://cdn-images-1.medium.com/v2/resize:fit:2400/1*86UdliKFCG_YnLIA8n2IyQ.jpeg" alt="2025 Basketball Summer Coaching Camp">
         <div class="achievement-content">
             <h3>2025 Basketball Summer Coaching Camp</h3>
-            <p>ADBA hosted a successful basketball camp at SSBN Stadium in Ananthapuramu, engaging hundrends of young athletes. The initiative fostered community spirit, promoted basketball, and provided training under our esteemed NIS coaches, strengthening local talent development.</p>
+            <p>Ananthapuramu, [1st May 2025] - The Ananthapuramu District Basketball Association (ADBA) is thrilled to announce its comprehensive Summer Basketball Coaching Camp for 2025, designed to nurture young talent and promote the sport across the district. This highly anticipated camp will be conducted across multiple key locations, ensuring accessibility and top-notch training facilities for aspiring basketball players.
+The camp aims to provide expert coaching in fundamental skills, advanced techniques, game strategies, and physical conditioning. Participants will benefit from specialized drills, scrimmages, and personalized attention from experienced coaches, all aimed at enhancing their basketball prowess and fostering a love for the game.
+To cater to a wider audience and leverage the best facilities, the camp will be held at the following prominent venues:
+<ul>
+Indoor Stadium, Ananthapuramu
+SSBN College Grounds
+JNTU College Grounds
+PTC Grounds
+Uravakonda: Extending the reach of quality coaching to a key town in the district, ensuring local talent is not overlooked.
+</ul>ul
+This summer coaching camp is a golden opportunity for young players from Ananthapuramu district to hone their skills, learn from seasoned professionals, and connect with fellow basketball enthusiasts. ADBA is committed to fostering the next generation of basketball stars, and this camp is a significant step in that direction.
+Details regarding registration, camp dates, and timings for each location available in https://adba.co.in Interested participants are encouraged to reach the locations whichever are nearer to you.</p>
         </div>
     </div>
     <div class="achievement" data-image="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=150&q=80" data-title="Top-Three Finish at 2024 U23 District Championship" data-description="Our U23 team excelled at the 2024 Inter District 3x3 Basketball Championship in Vijayawada, securing a top-three position. Their dynamic play and teamwork highlighted ADBA’s commitment to nurturing competitive talent across age groups.">
