--- a/index.html
+++ b/index.html
@@ -595,17 +595,15 @@
         <div class="achievement-content">
             <h3>2025 Basketball Summer Coaching Camp</h3>
             <p>Ananthapuramu, [1st May 2025] - The Ananthapuramu District Basketball Association (ADBA) is thrilled to announce its comprehensive Summer Basketball Coaching Camp for 2025, designed to nurture young talent and promote the sport across the district. This highly anticipated camp will be conducted across multiple key locations, ensuring accessibility and top-notch training facilities for aspiring basketball players.
-The camp aims to provide expert coaching in fundamental skills, advanced techniques, game strategies, and physical conditioning. Participants will benefit from specialized drills, scrimmages, and personalized attention from experienced coaches, all aimed at enhancing their basketball prowess and fostering a love for the game.
-To cater to a wider audience and leverage the best facilities, the camp will be held at the following prominent venues:
+The camp aims to provide expert coaching in fundamental skills, advanced techniques, game strategies, and physical conditioning. The camp will be held at the following prominent venues, Interested participants are encouraged to reach the locations whichever is nearer to you.
 <ul>
-Indoor Stadium, Ananthapuramu
-SSBN College Grounds
-JNTU College Grounds
-PTC Grounds
-Uravakonda: Extending the reach of quality coaching to a key town in the district, ensuring local talent is not overlooked.
-</ul>ul
-This summer coaching camp is a golden opportunity for young players from Ananthapuramu district to hone their skills, learn from seasoned professionals, and connect with fellow basketball enthusiasts. ADBA is committed to fostering the next generation of basketball stars, and this camp is a significant step in that direction.
-Details regarding registration, camp dates, and timings for each location available in https://adba.co.in Interested participants are encouraged to reach the locations whichever are nearer to you.</p>
+<li>Indoor Stadium, Ananthapuramu</li>
+<li>SSBN College Grounds</li>
+<li>JNTU College Grounds</li>
+<li>PTC Grounds</li>
+<li>Uravakonda: Extending the reach of quality coaching to a key town in the district, ensuring local talent is not overlooked.</li>
+</ul>
+ </p>
         </div>
     </div>
     <div class="achievement" data-image="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=150&q=80" data-title="Top-Three Finish at 2024 U23 District Championship" data-description="Our U23 team excelled at the 2024 Inter District 3x3 Basketball Championship in Vijayawada, securing a top-three position. Their dynamic play and teamwork highlighted ADBA’s commitment to nurturing competitive talent across age groups.">
