--- a/index.html
+++ b/index.html
@@ -590,15 +590,14 @@
             <p>The 10th AP Sub-Junior Inter District Basketball Championship, held at PES Public School grounds, Chittoor (AP) from May 15th-18th, 2025, saw our boys deliver an outstanding campaign. In a thrilling final, they narrowly fell to East Godavari with a score of 35–38. Despite the close loss, their remarkable play and unwavering determination throughout the game earned them significant recognition and respect from everyone involved in the competition.</p>
         </div>
     </div>
-    <div class="achievement" data-image="https://cdn-images-1.medium.com/v2/resize:fit:2400/1*86UdliKFCG_YnLIA8n2IyQ.jpeg" data-title="2025 Basketball Summer Coaching Camp" data-description="Ananthapuramu, [1st May 2025] - The Ananthapuramu District Basketball Association (ADBA) is thrilled to announce its comprehensive Summer Basketball Coaching Camp for 2025, designed to nurture young talent and promote the sport across the district. This highly anticipated camp will be conducted across multiple key locations, ensuring accessibility and top-notch training facilities for aspiring basketball players. The camp aims to provide expert coaching in fundamental skills, advanced techniques, game strategies, and physical conditioning. The camp will be held at the following prominent venues, Interested participants are encouraged to reach the locations whichever is nearer to you.
-
+    <div class="achievement" data-image="https://cdn-images-1.medium.com/v2/resize:fit:2400/1*86UdliKFCG_YnLIA8n2IyQ.jpeg" data-title="2025 Basketball Summer Coaching Camp" data-description= <p> The Ananthapuramu District Basketball Association (ADBA) is thrilled to announce its comprehensive Summer Basketball Coaching Camp for 2025, designed to nurture young talent and promote the sport across the district. This highly anticipated camp will be conducted across multiple key locations, ensuring accessibility and top-notch training facilities for aspiring basketball players. The camp aims to provide expert coaching in fundamental skills, advanced techniques, game strategies, and physical conditioning. The camp will be held at the following prominent venues, Interested participants are encouraged to reach the locations whichever is nearer to you.
 <ul>
 <li>Indoor Stadium, Ananthapuramu</li>
 <li>SSBN College Grounds</li>
 <li>JNTU College Grounds</li>
 <li>PTC Grounds</li>
 <li>Uravakonda: Extending the reach of quality coaching to a key town in the district, ensuring local talent is not overlooked.</li>
-</ul>">
+</ul> </p>">
         <img src="https://cdn-images-1.medium.com/v2/resize:fit:2400/1*86UdliKFCG_YnLIA8n2IyQ.jpeg" alt="2025 Basketball Summer Coaching Camp">
         <div class="achievement-content">
             <h3>2025 Basketball Summer Coaching Camp</h3>
