--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
         <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#news">News</a></li>
-            <li><a href="#achievements">Achievements</a></li>
+            <li><a href="achievements.html">Achievements</a></li>
             <li><a href="#team">Team</a></li>               
             <li><a href="#contact">Contact</a></li>
         </ul>
