--- a/achievements.html
+++ b/achievements.html
@@ -385,7 +385,7 @@
     <div class="content">
         <section id="achievements">
             <h2>Our Achievements</h2>
-            <div class="achievement" id="achievement-1" data-image="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*r2BRNJLH0BPAgZBSCRgfSA.jpeg" data-title="Rising Stars: Remarkable Play at the AP 10th Sub-Junior Basketball Finals 2025" data-description="The 10th AP Sub-Junior Inter District Basketball Championship, held at PES Public School grounds, Chittoor (AP) from May 15th-18th, 2025, saw our boys deliver an outstanding campaign. In a thrilling final, they narrowly fell to East Godavari with a score of 35–38. Despite the close loss, their remarkable play and unwavering determination throughout the game earned them significant recognition and respect from everyone involved in the competition." data-video="https://www.youtube.com/embed/bfiwfx6y6Wg">
+            <div class="achievement" id="achievement-1" data-image="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*r2BRNJLH0BPAgZBSCRgfSA.jpeg" data-title="Rising Stars: Remarkable Play at the AP 10th Sub-Junior Basketball Finals 2025" data-description="The 10th AP Sub-Junior Inter District Basketball Championship, held at PES Public School grounds, Chittoor (AP) from May 15th-18th, 2025, saw our boys deliver an outstanding campaign. In a thrilling final, they narrowly fell to East Godavari with a score of 35–38. Despite the close loss, their remarkable play and unwavering determination throughout the game earned them significant recognition and respect from everyone involved in the competition.">
                 <img src="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*r2BRNJLH0BPAgZBSCRgfSA.jpeg" alt="2025 Sub-Junior Championship Runner-Up">
                 <div class="achievement-content">
                     <div class="achievement-id">ID: achievement-1</div>
@@ -393,8 +393,8 @@
                     <p>The 10th AP Sub-Junior Inter District Basketball Championship, held at PES Public School grounds, Chittoor (AP) from May 15th-18th, 2025, saw our boys deliver an outstanding campaign. In a thrilling final, they narrowly fell to East Godavari with a score of 35–38. Despite the close loss, their remarkable play and unwavering determination throughout the game earned them significant recognition and respect from everyone involved in the competition.</p>
                 </div>
             </div>
-            <div class="achievement" id="achievement-2" data-image="https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=150&q=80" data-title="2024 Community Basketball Camp" data-description="ADBA hosted a successful basketball camp at SSBN Stadium in Ananthapuramu, engaging over 100 young athletes. The initiative fostered community spirit, promoted basketball, and provided training under our esteemed coaches, strengthening local talent development." data-video="">
-                <img src="https://images.unsplash.com/photo-1516321497487-e288fb19713f?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=150&q=80" alt="2024 Community Basketball Camp">
+            <div class="achievement" id="achievement-2" data-image="https://cdn-images-1.medium.com/max/800/1*86UdliKFCG_YnLIA8n2IyQ.jpeg" data-title="2025 Basketball Summer Coaching Camp" data-description="" data-video="">
+                <img src="https://cdn-images-1.medium.com/max/800/1*86UdliKFCG_YnLIA8n2IyQ.jpeg" alt="2025 Basketball Summer Coaching Camp">
                 <div class="achievement-content">
                     <div class="achievement-id">ID: achievement-2</div>
                     <h3>2025 Basketball Summer Coaching Camp</h3>
@@ -411,12 +411,12 @@ This summer coaching camp is a golden opportunity for young players from Anantha
 Details regarding registration, camp dates, and timings for each location available in https://adba.co.in. Interested participants are encouraged to reach the locations whichever are nearer to you.</p>
                 </div>
             </div>
-            <div class="achievement" id="achievement-3" data-image="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=150&q=80" data-title="Top-Three Finish at 2024 U23 District Championship" data-description="Our U23 team excelled at the 2024 Inter District 3x3 Basketball Championship in Vijayawada, securing a top-three position. Their dynamic play and teamwork highlighted ADBA’s commitment to nurturing competitive talent across age groups." data-video="https://www.youtube.com/embed/f7C5uYCiAs0">
-                <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?ixlib=rb-4.0.3&auto=format&fit=crop&w=150&h=150&q=80" alt="2024 U23 District Championship">
+            <div class="achievement" id="achievement-3" data-image="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*__hP41MDD6Lt24Eg2AULgg.jpeg" data-title="ADBA have given a hand-off to young boys in Basketball local tournament" data-description="">
+                <img src="https://miro.medium.com/v2/resize:fit:4800/format:webp/1*__hP41MDD6Lt24Eg2AULgg.jpeg" alt="ADBA have given a hand-off to young boys in Basketball local tournament">
                 <div class="achievement-content">
                     <div class="achievement-id">ID: achievement-3</div>
-                    <h3> ADBA District Local Championship</h3>
-                    <p>Our U23 team excelled at the 2024 Inter District 3x3 Basketball Championship in Vijayawada, securing a top-three position. Their dynamic play and teamwork highlighted ADBA’s commitment to nurturing competitive talent across age groups.</p>
+                    <h3> ADBA have given a hand-off to young boys in Basketball local tournament</h3>
+                    <p>To prepare for the 10th AP Sub-Junior Inter District Basketball Championship (May 15-18, 2025, Chittoor), ADBA hosted a local tournament at the Indoor Stadium, Anantapur, in early May 2025. This event ignited enthusiasm and competitive spirit among our young athletes, contributing to their remarkable runner-up finish in Chittoor. Below are glimpses of the local tournament, showcasing our boys’ talent and determination.</p>
                 </div>
             </div>
         </section>
