--- a/index.html
+++ b/index.html
@@ -530,11 +530,15 @@
             </div>
             <div class="slide" style="background-image: url('https://miro.medium.com/v2/resize:fit:4800/format:webp/1*dDiAe2JwQpRDYcD7ZGovIw.jpeg');">
                 <div class="title">Our beloved Bhaskar Reddy sir</div>
-                <div class="description">Remembering our former Basketball president of AP</div>
+                <div class="description">Remembering our former Basketball president of Andhra Pradesh</div>
             </div>
             <div class="slide" style="background-image: url('https://miro.medium.com/v2/resize:fit:4800/format:webp/1*gT_4R3iqs-log3og3eWeSg.jpeg');">
                 <div class="title">Community Day</div>
-                <div class="description">Where you'll draw from Ananthapuramu SSBN Stadium.</div>
+                <div class="description">Where you'll draw from Ananthapuramu SSBN.</div>
+            </div>
+             <div class="slide" style="background-image: url('https://miro.medium.com/v2/resize:fit:4800/format:webp/1*r2BRNJLH0BPAgZBSCRgfSA.jpeg');">
+                <div class="title">Rising Stars!!</div>
+                <div class="description">Sub-Junior boys fought for Winners ended with Runner-up.</div>
             </div>
         </div>
         <div class="nav-buttons">
@@ -573,13 +577,10 @@
         <section id="schedule">
             <h2>NEWS</h2>
             <ul>
-                
                 <li>U23 3X3 Inter District Basketball championship in the last week of May 2025 Or The First week of June at Vijayawada.[Later the camp will be in Chittoor. Nationals will be from 12th to 14th June 2025 at Kochi , Kerala.]</li>
                 <li>Inter District Sub-juniors from May 15th to 18th, 2025 at PES public school, Chittoor, Andhra Pradesh</li>
-                
             </ul>
         </section>
-
         </section>
         <section id="achievements">
     <h2>Our Achievements</h2>
